# neutronpy

./: .gitignore  LICENSE.RESLIB.txt  README.md  gui.py  pyproject.toml  test.py
neutronpy/: __init__.py  constants.py  functions.py  gui.py  neutron.py  spurion.py
neutronpy/crystal/: atom.py  lattice.py  material.py  plot.py  sample.py  structure_factors.py
neutronpy/data/: analysis.py  scans.py
neutronpy/database/: dspacings.json
neutronpy/fileio/: __init__.py  instrument.py
neutronpy/fileio/loaders/: ice.py  icp.py  mad.py  spice.py
neutronpy/fileio/templates/: instrument.toml
neutronpy/instrument/: __init__.py  analyzer.py  exceptions.py  general.py  instrument.py  monochromator.py  plot.py  takin.py  tas_instrument.py  tas_multiplexing_instrument.py  tof_instrument.py  tools.py
neutronpy/instrument/TW_respy/: __init__.py  eck.py  helpers.py  params_in20.py  pop.py  reso.py
neutronpy/instruments/: __init__.py  exceptions.py  neutron_spectrometer.py  tas_multiplexing_spectrometer.py  tas_spectrometer.py  tof_spectrometer.py  tools.py
neutronpy/instruments/TW_respy/: __init__.py  params_in20.py  reso.py
neutronpy/instruments/components/: __init__.py  chopper.py  component.py  monochromator.py
neutronpy/loggers/: TAS_logger.py  __init__.py
neutronpy/lsfit/: plot.py
tests/: test_TAS.py  test_TAScomponents.py  test_data.py  test_io.py  test_lattice.py  test_neutron.py  test_resolution_tas.py  test_resolution_tof.py  test_sample.py  test_spurion.py  test_tas_ellipsoid.py
